--- a/config/nodemon.config.json
+++ b/config/nodemon.config.json
@@ -11,5 +11,5 @@
   ],
   "watch": ["src/server/"],
   "ext": "ts",
-  "exec": "cross-env NODE_ENV=development node --inspect -r ts-node/register ./src/server/app/server.ts"
+  "exec": "cross-env NODE_ENV=development node --inspect -r ts-node/register ./src/server/server.ts"
 }
