--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "dist/server.js",
   "scripts": {
     "tsc": "tsc",
-    "client": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.dev.js",
+    "client": "cross-env NODE_ENV=development webpack serve --config config/webpack.dev.js",
     "server": "nodemon --config config/nodemon.config.json",
     "build": "",
     "check": "npm run prettier && npm run eslint",
@@ -54,13 +54,17 @@
     "lodash": "^4.17.20",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
+    "nocache": "^2.1.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "sequelize": "^6.3.5",
+    "stream-browserify": "^3.0.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
