--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
-      "eslint --fix"
+      "npm run eslint"
     ],
     "**/*.{json,css,scss,md}": [
       "prettier --write"
