--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "note-app",
+  "name": "notion",
   "version": "1.0.0",
   "description": "Note app for developer",
   "author": "Hieu Nguyen",
@@ -39,16 +39,15 @@
   },
   "homepage": "https://github.com/ntrhieu1905/note-app#readme",
   "dependencies": {
-    "antd": "^4.10.0",
+    "antd": "^4.12.3",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "dayjs": "^1.10.3",
+    "dayjs": "^1.10.4",
     "debug": "^4.3.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "express-validator": "^6.9.2",
-    "helmet": "^4.3.1",
     "http-status": "^1.5.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
@@ -63,58 +62,57 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "sequelize": "^6.3.5",
+    "sequelize": "^6.5.0",
     "stream-browserify": "^3.0.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
+    "@babel/core": "^7.12.16",
+    "@babel/preset-env": "^7.12.16",
+    "@babel/preset-react": "^7.12.13",
     "@types/body-parser": "^1.19.0",
-    "@types/cors": "^2.8.9",
+    "@types/cors": "^2.8.10",
     "@types/debug": "^4.1.5",
-    "@types/express": "^4.17.9",
+    "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
-    "@types/helmet": "^4.0.0",
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/lodash": "^4.14.167",
-    "@types/node": "^14.14.20",
-    "@types/passport": "^1.0.5",
-    "@types/passport-jwt": "^3.0.3",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/lodash": "^4.14.168",
+    "@types/node": "^14.14.28",
+    "@types/passport": "^1.0.6",
+    "@types/passport-jwt": "^3.0.4",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
     "@types/uuid": "^8.3.0",
-    "@types/validator": "^13.1.2",
-    "@typescript-eslint/eslint-plugin": "^4.12.0",
-    "@typescript-eslint/parser": "^4.12.0",
+    "@types/validator": "^13.1.3",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
     "babel-loader": "^8.2.2",
     "babel-plugin-import": "^1.13.3",
     "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^5.3.0",
     "copy-webpack-plugin": "^7.0.0",
     "cross-env": "^7.0.3",
-    "css-loader": "^5.0.1",
+    "css-loader": "^5.0.2",
     "dotenv": "^8.2.0",
-    "eslint": "^7.17.0",
-    "eslint-config-prettier": "^7.1.0",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-react": "^7.22.0",
-    "html-webpack-plugin": "^4.5.1",
-    "husky": "^4.3.7",
-    "less": "^4.0.0",
-    "less-loader": "^7.2.1",
-    "lint-staged": "^10.5.3",
+    "html-webpack-plugin": "^5.1.0",
+    "husky": "^5.0.9",
+    "less": "^4.1.1",
+    "less-loader": "^8.0.0",
+    "lint-staged": "^10.5.4",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "style-loader": "^2.0.0",
-    "ts-loader": "^8.0.14",
+    "ts-loader": "^8.0.17",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.3",
-    "webpack": "^5.12.2",
-    "webpack-cli": "^4.3.1",
-    "webpack-dev-server": "^3.11.1",
+    "typescript": "^4.1.5",
+    "webpack": "^5.22.0",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3"
   }
 }
